tests/invalid/goto/i16_duplicate_label.f
program duplab
  integer i
10 i = 1
10 i = 2
  print *, i
end
